force-app/main/default/objects/Convsta_Entreprise__c/Convsta_Entreprise__c.object-meta.xml
<CustomObject>
    <description>Informations relatives à l&apos;entreprise au sein de laquelle l&apos;étudiant va effectuer son expérience professionnelle - A saisir pour sa demande d&apos;expérience professionnelle.</description>
    <label>Entreprise</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Convsta Entreprise</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Entreprises</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>