force-app/main/default/objects/Convsta_Entreprise__c/fields/Adresse_Entreprise__c.field-meta.xml
<CustomField>
    <fullName>Adresse_Entreprise__c</fullName>
    <description>L&apos;adresse de l&apos;entreprise</description>
    <inlineHelpText>Adresse de l&apos;entreprise</inlineHelpText>
    <label>Adresse de l&apos;Entreprise</label>
    <length>120</length>
    <type>Text</type>
</CustomField>