force-app/main/default/objects/Convsta_Entreprise__c/fields/Assurance_complementaire__c.field-meta.xml
<CustomField>
    <fullName>Assurance_complementaire__c</fullName>
    <inlineHelpText>L’entreprise d’accueil fournit une couverture médicale, conformément à la réglementation locale . OUI (l’étudiant bénéficiera de la Sécurité Sociale Française + la couverture de l’entreprise) NON (l’étudiant bénéficiera seulement de la Sécurité Sociale)</inlineHelpText>
    <label>Assurance complémentaire</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Oui</fullName>
            </value>
            <value>
                <fullName>Non</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>