force-app/main/default/objects/Convsta_Entreprise__c/fields/Civilite_Signataire_Convention__c.field-meta.xml
<CustomField>
    <fullName>Civilite_Signataire_Convention__c</fullName>
    <description>Le titre de civilité de l&apos;employé en charge des ressources humaines qui peut engager l’entreprise dans le cadre de l&apos;expérience professionnelle de l&apos;étudiant.</description>
    <inlineHelpText>Civilité du représentant légal qui peut engager l’entreprise dans le cadre de l&apos;expérience professionnelle de l&apos;étudiant.</inlineHelpText>
    <label>Civilité du Signataire de la Convention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M</fullName>
            </value>
            <value>
                <fullName>Mme</fullName>
            </value>
            <value>
                <fullName>Dr</fullName>
                <isActive>false</isActive>
                <label>Dr</label>
            </value>
            <value>
                <fullName>Me</fullName>
                <isActive>false</isActive>
                <label>Me</label>
            </value>
            <value>
                <fullName>Mlle</fullName>
                <isActive>false</isActive>
                <label>Mlle</label>
            </value>
            <value>
                <fullName>Pr</fullName>
                <isActive>false</isActive>
                <label>Pr</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>