force-app/main/default/objects/Convsta_Entreprise__c/fields/code_NAF__c.field-meta.xml
<CustomField>
    <fullName>code_NAF__c</fullName>
    <label>code NAF</label>
    <length>255</length>
    <type>Text</type>
</CustomField>