force-app/main/default/objects/Convsta_Entreprise__c/fields/Code_Postal__c.field-meta.xml
<CustomField>
    <fullName>Code_Postal__c</fullName>
    <description>Le code postal de l&apos;entreprise au sein de laquelle l&apos;étudiant va effectuer son expérience professionnelle</description>
    <inlineHelpText>Code postal de l&apos;entreprise au sein de laquelle l&apos;étudiant va effectuer son expérience professionnelle</inlineHelpText>
    <label>Code Postal</label>
    <length>40</length>
    <type>Text</type>
</CustomField>