force-app/main/default/objects/Convsta_Entreprise__c/fields/Convsta_Adresse_du_lieu_du_stage__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Adresse_du_lieu_du_stage__c</fullName>
    <label>Adresse du lieu de ma mission</label>
    <type>TextArea</type>
</CustomField>