force-app/main/default/objects/Convsta_Entreprise__c/fields/Convsta_Code_postal_du_lieu_du_stage__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Code_postal_du_lieu_du_stage__c</fullName>
    <label>Code postal du lieu de ma mission</label>
    <length>18</length>
    <type>Text</type>
</CustomField>