force-app/main/default/objects/Convsta_Entreprise__c/fields/Convsta_FormTxt_Adresse_lieu_de_stage__c.field-meta.xml
<CustomField>
    <fullName>Convsta_FormTxt_Adresse_lieu_de_stage__c</fullName>
    <formula>IF(Mon_stage_se_deroule_a_une_autre_adresse__c, Convsta_Adresse_du_lieu_du_stage__c +&apos; &apos;+ Convsta_Code_postal_du_lieu_du_stage__c + &apos; &apos;+ Convsta_Ville_du_lieu_du_stage__c +&apos; &apos;+ TEXT( Etat__c )+TEXT( Pays2__c ) , 
   Adresse_Entreprise__c + &apos; &apos;+ Code_Postal__c +&apos; &apos;+ Ville__c +&apos; &apos;+ TEXT( Etat__c )+TEXT( Pays2__c ) 
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adresse lieu de stage</label>
    <type>Text</type>
</CustomField>