force-app/main/default/objects/Convsta_Entreprise__c/fields/Convsta_Pays_du_lieu_de_ma_mission__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Pays_du_lieu_de_ma_mission__c</fullName>
    <label>Pays du lieu de ma mission</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pays</valueSetName>
    </valueSet>
</CustomField>