force-app/main/default/objects/Convsta_Entreprise__c/fields/Email_Signataire_Convention__c.field-meta.xml
<CustomField>
    <fullName>Email_Signataire_Convention__c</fullName>
    <description>L&apos;adresse email de l&apos;employé en charge des ressources humaines qui peut engager l’entreprise dans le cadre de l&apos;expérience professionnelle de l&apos;étudiant.</description>
    <inlineHelpText>Conseil : Demandez qui va recevoir et signer la convention. ex: le responsable légal peut être le Directeur Général mais c&apos;est dans les faits son assistante qui signera la convention.C&apos;est donc effectivement le mail de l&apos;assistante qu&apos;il faudra renseigner</inlineHelpText>
    <label>Email du Signataire de la Convention</label>
    <type>Email</type>
</CustomField>