force-app/main/default/objects/Convsta_Entreprise__c/fields/Etat__c.field-meta.xml
<CustomField>
    <fullName>Etat__c</fullName>
    <description>L&apos;état, la province ou le territoire où est située l&apos;entreprise au sein de laquelle l&apos;étudiant va effectuer son expérience professionnelle</description>
    <inlineHelpText>Etat, province ou territoire où est située l&apos;entreprise au sein de laquelle l&apos;étudiant va effectuer son expérience professionnelle</inlineHelpText>
    <label>Etat/Province/Territoire</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Pays2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AU.ACT</fullName>
            </value>
            <value>
                <fullName>AU.NSW</fullName>
            </value>
            <value>
                <fullName>AU.NT</fullName>
            </value>
            <value>
                <fullName>AU.QLD</fullName>
            </value>
            <value>
                <fullName>AU.SA</fullName>
            </value>
            <value>
                <fullName>AU.TAS</fullName>
            </value>
            <value>
                <fullName>AU.VIC</fullName>
            </value>
            <value>
                <fullName>AU.WA</fullName>
            </value>
            <value>
                <fullName>BR.AC</fullName>
            </value>
            <value>
                <fullName>BR.AL</fullName>
            </value>
            <value>
                <fullName>BR.AM</fullName>
            </value>
            <value>
                <fullName>BR.AP</fullName>
            </value>
            <value>
                <fullName>BR.BA</fullName>
            </value>
            <value>
                <fullName>BR.CE</fullName>
            </value>
            <value>
                <fullName>BR.DF</fullName>
            </value>
            <value>
                <fullName>BR.ES</fullName>
            </value>
            <value>
                <fullName>BR.GO</fullName>
            </value>
            <value>
                <fullName>BR.MA</fullName>
            </value>
            <value>
                <fullName>BR.MG</fullName>
            </value>
            <value>
                <fullName>BR.MS</fullName>
            </value>
            <value>
                <fullName>BR.MT</fullName>
            </value>
            <value>
                <fullName>BR.PA</fullName>
            </value>
            <value>
                <fullName>BR.PB</fullName>
            </value>
            <value>
                <fullName>BR.PE</fullName>
            </value>
            <value>
                <fullName>BR.PI</fullName>
            </value>
            <value>
                <fullName>BR.PR</fullName>
            </value>
            <value>
                <fullName>BR.RJ</fullName>
            </value>
            <value>
                <fullName>BR.RN</fullName>
            </value>
            <value>
                <fullName>BR.RO</fullName>
            </value>
            <value>
                <fullName>BR.RR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>