force-app/main/default/objects/Convsta_Entreprise__c/fields/Fonction_Signataire_Convention__c.field-meta.xml
<CustomField>
    <fullName>Fonction_Signataire_Convention__c</fullName>
    <description>La fonction de l&apos;employé en charge des ressources humaines qui peut engager l’entreprise dans le cadre de l&apos;expérience professionnelle de l&apos;étudiant.</description>
    <inlineHelpText>Conseil : Faites vous préciser le titre exact par un collaborateur de l&apos;équipe RH de l&apos;entreprise.</inlineHelpText>
    <label>Fonction du Signataire de la Convention</label>
    <length>80</length>
    <type>Text</type>
</CustomField>