force-app/main/default/objects/Convsta_Entreprise__c/fields/Guide_des_bonnes_pratiques__c.field-meta.xml
<CustomField>
    <fullName>Guide_des_bonnes_pratiques__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Je m&apos;engage à le respecter</label>
    <type>Checkbox</type>
</CustomField>