force-app/main/default/objects/Convsta_Entreprise__c/fields/Localisation_Entreprise__c.field-meta.xml
<CustomField>
    <fullName>Localisation_Entreprise__c</fullName>
    <description>L&apos;endroit où est située l&apos;entreprise au sein de laquelle l&apos;étudiant va effectuer son expérience professionnelle (en France ou à l&apos;étranger).</description>
    <inlineHelpText>Endroit où est située l&apos;entreprise au sein de laquelle l&apos;étudiant va effectuer son expérience professionnelle (en France ou à l&apos;étranger).</inlineHelpText>
    <label>Localisation de l&apos;Entreprise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En France</fullName>
                <default>true</default>
                <label>En France</label>
            </value>
            <value>
                <fullName>A l&apos;étranger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>