force-app/main/default/objects/Convsta_Entreprise__c/fields/MD_Demande__c.field-meta.xml
<CustomField>
    <fullName>MD_Demande__c</fullName>
    <label>Demande</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Entreprises</relationshipLabel>
    <relationshipName>Entreprise</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>