force-app/main/default/objects/Convsta_Entreprise__c/fields/Mon_stage_se_deroule_a_une_autre_adresse__c.field-meta.xml
<CustomField>
    <fullName>Mon_stage_se_deroule_a_une_autre_adresse__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Mon stage se déroule à une autre adresse</label>
    <type>Checkbox</type>
</CustomField>