force-app/main/default/objects/Convsta_Entreprise__c/fields/Nom_Entreprise__c.field-meta.xml
<CustomField>
    <fullName>Nom_Entreprise__c</fullName>
    <description>Le nom de l&apos;entreprise dans laquelle l&apos;étudiant effectue son expérience professionnelle</description>
    <inlineHelpText>Raison sociale de l&apos;entreprise dans laquelle l&apos;étudiant effectue son expérience professionnelle</inlineHelpText>
    <label>Nom de l&apos;Entreprise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>