force-app/main/default/objects/Convsta_Entreprise__c/fields/Nom_Signataire_Convention__c.field-meta.xml
<CustomField>
    <fullName>Nom_Signataire_Convention__c</fullName>
    <description>Le nom de l&apos;employé en charge des ressources humaines qui peut engager l’entreprise dans le cadre de l&apos;expérience professionnelle de l&apos;étudiant</description>
    <inlineHelpText>Conseil : Attention à l&apos;orthographe !!</inlineHelpText>
    <label>Nom du Signataire de la Convention</label>
    <length>80</length>
    <type>Text</type>
</CustomField>