force-app/main/default/objects/Convsta_Entreprise__c/fields/Pays2__c.field-meta.xml
<CustomField>
    <fullName>Pays2__c</fullName>
    <label>Pays</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pays</valueSetName>
    </valueSet>
</CustomField>