force-app/main/default/objects/Convsta_Entreprise__c/fields/Secteur_Activite__c.field-meta.xml
<CustomField>
    <fullName>Secteur_Activite__c</fullName>
    <description>Le secteur d&apos;activité dans lequel opère l&apos;entreprise au sein de laquelle l&apos;étudiant effectuera son expérience professionnelle.</description>
    <inlineHelpText>Secteur d&apos;activité dans lequel opère l&apos;entreprise au sein de laquelle l&apos;étudiant effectuera son expérience professionnelle.</inlineHelpText>
    <label>Secteur d&apos;Activité</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Administration Publique</fullName>
            </value>
            <value>
                <fullName>Agriculture/Pêche</fullName>
            </value>
            <value>
                <fullName>Automobile et Matériels de Transport</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
            <value>
                <fullName>Banque/Assurance/Scs Finan./Immobilier</fullName>
            </value>
            <value>
                <fullName>BTP/Habitat/Environnement</fullName>
            </value>
            <value>
                <fullName>Commerce/Distribution</fullName>
            </value>
            <value>
                <fullName>Construction/BTP</fullName>
            </value>
            <value>
                <fullName>Edition/Imprimerie/Reproduction</fullName>
            </value>
            <value>
                <fullName>Educa.Santé/Act.Sociale/Act.asso./média</fullName>
            </value>
            <value>
                <fullName>Energie/Eau</fullName>
            </value>
            <value>
                <fullName>Extraction et Industries Extractives</fullName>
            </value>
            <value>
                <fullName>Indust.Electriq/Electroniq./Informatique</fullName>
            </value>
            <value>
                <fullName>Industrie Agro-alimentaire/Tabac</fullName>
            </value>
            <value>
                <fullName>Industrie Bois/Papier/Carton</fullName>
            </value>
            <value>
                <fullName>Industrie Chimique/Pharmacie/Plastiques</fullName>
            </value>
            <value>
                <fullName>Industrie Textile/Habillement/Cuir</fullName>
            </value>
            <value>
                <fullName>Metallurgie/Machines et Equipement</fullName>
            </value>
            <value>
                <fullName>Services aux Entreprises/Conseil</fullName>
            </value>
            <value>
                <fullName>Services aux particuliers</fullName>
            </value>
            <value>
                <fullName>Télécommunication/services informatiques</fullName>
            </value>
            <value>
                <fullName>Transports/Logistique/Tourisme</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>