force-app/main/default/objects/Convsta_Entreprise__c/fields/SIRET__c.field-meta.xml
<CustomField>
    <fullName>SIRET__c</fullName>
    <description>Le numéro SIRET de l&apos;entreprise au sein de laquelle l&apos;étudiant va effectuer son expérience professionnelle</description>
    <inlineHelpText>Numéro SIRET de l&apos;entreprise signataire de la convention de stage.</inlineHelpText>
    <label>SIRET</label>
    <length>14</length>
    <type>Text</type>
</CustomField>