force-app/main/default/objects/Convsta_Entreprise__c/fields/Telephone_Siege__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Siege__c</fullName>
    <description>Le numéro de téléphone principal de l&apos;entreprise au sein de laquelle l&apos;étudiant va effectuer son expérience professionnelle.</description>
    <inlineHelpText>Numéro de téléphone principal de l&apos;entreprise au sein de laquelle l&apos;étudiant va effectuer son expérience professionnelle.</inlineHelpText>
    <label>Téléphone Siège Social</label>
    <type>Phone</type>
</CustomField>