force-app/main/default/objects/Convsta_Entreprise__c/fields/Telephone_Signataire_Convention__c.field-meta.xml
<CustomField>
    <fullName>Telephone_Signataire_Convention__c</fullName>
    <description>Le numéro de téléphone de l&apos;employé en charge des ressources humaines qui peut engager l’entreprise dans le cadre de l&apos;expérience professionnelle de l&apos;étudiant</description>
    <inlineHelpText>Numéro de téléphone du représentant légal qui peut engager l’entreprise dans le cadre de l&apos;expérience professionnelle de l&apos;étudiant</inlineHelpText>
    <label>Téléphone du Signataire de la Convention</label>
    <type>Phone</type>
</CustomField>