force-app/main/default/objects/Convsta_Entreprise__c/fields/Tranche_effectif_etablissement__c.field-meta.xml
<CustomField>
    <fullName>Tranche_effectif_etablissement__c</fullName>
    <label>Tranche effectif etablissement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>