force-app/main/default/objects/Convsta_Entreprise__c/fields/Ville__c.field-meta.xml
<CustomField>
    <fullName>Ville__c</fullName>
    <description>La ville où est située l&apos;entreprise au sein de laquelle l&apos;étudiant va effectuer son expérience professionnelle</description>
    <inlineHelpText>Localisation de l&apos;entreprise signataire de la convention.</inlineHelpText>
    <label>Ville</label>
    <length>40</length>
    <type>Text</type>
</CustomField>