force-app/main/default/objects/Convsta_Entreprise__c/validationRules/Remplissage_civilite_signataire_conv.validationRule-meta.xml
<ValidationRule>
    <fullName>Remplissage_civilite_signataire_conv</fullName>
    <active>true</active>
    <description>Rend obligatoire la saisi du champ civilité du signataire de la convention lors de la création d&apos;une demande de stage par un étudiant.</description>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
NOT(ISNEW())&amp;&amp; AND ( 
NOT(MD_Demande__r.Convsta_tech_notIsPortaluser__c), 
TEXT(MD_Demande__r.Convsta_Type_de_demande__c)=&apos;Stage&apos;, 
ISBLANK(TEXT( Civilite_Signataire_Convention__c )) 
)</errorConditionFormula>
    <errorDisplayField>Civilite_Signataire_Convention__c</errorDisplayField>
    <errorMessage>Merci de renseigner la civilité du signataire de la convention.</errorMessage>
</ValidationRule>