force-app/main/default/objects/Convsta_Entreprise__c/validationRules/Remplissage_telephone_signataire_conv.validationRule-meta.xml
<ValidationRule>
    <fullName>Remplissage_telephone_signataire_conv</fullName>
    <active>true</active>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
NOT(ISNEW())&amp;&amp; AND ( 
NOT(MD_Demande__r.Convsta_tech_notIsPortaluser__c), 
TEXT(MD_Demande__r.Convsta_Type_de_demande__c)=&apos;Stage&apos;, 
ISBLANK( Telephone_Signataire_Convention__c ) 
)</errorConditionFormula>
    <errorDisplayField>Telephone_Signataire_Convention__c</errorDisplayField>
    <errorMessage>Merci de renseigner le numéro de téléphone du signataire de la convention.</errorMessage>
</ValidationRule>